# pointcloud_and_imu_flipper_angle_control

./: LICENSE  README.md
flipper_control_data/: CMakeLists.txt  mainpage.dox  package.xml
flipper_control_data/include/flipper_control_data/: main_window.hpp  qnode.hpp
flipper_control_data/src/: main.cpp  main_window.cpp  main_window.cpp.autosave  qnode.cpp
flipper_control_data/ui/: main_window.ui
flipper_data/: CMakeLists.txt  README.md  package.xml
flipper_data/include/flipper_data/: mainwindow.h
flipper_data/resources/: images.qrc
flipper_data/src/: main.cpp  mainwindow.cpp  mainwindow.ui
flipper_mj_msgs/: CMakeLists.txt  package.xml
flipper_msgs/: CMakeLists.txt  package.xml
flipper_msgs/msg/: flipper.msg
realsense_filter/: CMakeLists.txt  package.xml
realsense_filter/include/realsense_filter/: angle.h  reasense_filter.h
realsense_filter/launch/: realsense_flipper.launch  visual.launch
realsense_filter/rviz/: realsense_flipper.rviz
realsense_filter/src/: realsense_filter.cpp
